# 2023-janssen-visibly-pushdown

./: .gitignore  Cargo.toml  LICENSE.MD  README.md  alsjeblieftwerk.nwa  generation_speed.jsonl  output.json  test.json
benches/: README.md  generation.rs  identifier.rs  main.rs  nested.rs  regular.rs
benches/result/: Plots.ipynb  generation.jsonl  requirements.txt  result.jsonl  results.jsonl
examples/: a-lang.vpa  invalid-lang.vpa
src/: ast.rs  elaborator.rs  ir.rs  lib.rs  parser.rs  regex.rs  translator.rs
src/recognizer/: builder.rs  mod.rs  parse_tree.rs  recognizer_automaton.rs
test-grammar-generator/: Cargo.toml  test.txt
test-grammar-generator/src/: identifier.rs  lib.rs  nested.rs  regular.rs
