[package]
name = "vpl-parser-generator"
version = "1.0.0"
edition = "2021"

[dependencies]
nom = "7.1.1"
regex = "1.7.1"
regex-syntax = "0.6.28"

[dev-dependencies]
criterion = {version="0.4", features=["html_reports"]}
test-grammar-generator = { path = "test-grammar-generator" }

[[bench]]
name = "main"
harness = false

[profile.release]
debug = true